0.05  2015-05-04
  - Remove t/threads.t - The test sometimes fails for misterious reason.
  - t/timeo.t accept timeouts between .1 and .12

0.04  2015-01-28
  - Make sure the nanomsg library and the headers are available

0.03  2015-01-22
  - Documentation improvements.
  - Fix OS X tests
  - Fix nn_getsockopt - An uninitialized variable results in unpredictable
    effects like segfaults or out of memory errors.
  - Fix rar segfault when using nn_recv.

0.02  2013-08-27
  - Documentation improvements.

0.01  2013-08-24
  - Initial release.